# Ming

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt  startup.sh
deepresearch-bench/: export_reference_markdown.py  race_result.txt  raw_results.jsonl  run_batch.py  run_batch.sh  run_state_dashboard.html  serve_run_state_dashboard.py
deepresearch-bench/reference/: id_1.md  id_10.md  id_100.md  id_11.md  id_12.md  id_13.md  id_14.md  id_15.md  id_16.md  id_17.md  id_18.md  id_19.md  id_2.md  id_20.md  id_21.md  id_22.md  id_23.md  id_24.md  id_25.md  id_26.md  id_27.md  id_28.md  id_29.md  id_3.md  id_30.md  id_31.md  id_32.md  id_33.md  id_34.md  id_35.md  id_36.md  id_37.md  id_38.md  id_39.md  id_4.md  id_40.md  id_41.md  id_42.md  id_43.md  id_44.md  (+60 more)
deepresearch-bench/submission/: id_1.md  id_10.md  id_100.md  id_11.md  id_12.md  id_13.md  id_14.md  id_15.md  id_16.md  id_17.md  id_18.md  id_19.md  id_2.md  id_20.md  id_21.md  id_22.md  id_23.md  id_24.md  id_25.md  id_26.md  id_27.md  id_28.md  id_29.md  id_3.md  id_30.md  id_31.md  id_32.md  id_33.md  id_34.md  id_35.md  id_36.md  id_37.md  id_38.md  id_39.md  id_4.md  id_40.md  id_41.md  id_42.md  id_43.md  id_44.md  (+60 more)
ming/: orchestrator.py  quality_auditor.py  scout.py  subagent.py  writer_agent.py
ming/core/: __init__.py  config.py  outline_parser.py  prompts.py  redis.py  redis_flush.py  reference_cleanup.py  text_metrics.py  token_tracker.py
ming/extraction/: __init__.py  kg_module.py  kg_schema.py  ner_module.py  (+4 more)
runtime-tui/: Cargo.toml  README.md  mock_state.json
(+25 files in other folders)
